Fixed statistic.tpl, text fields are now aligned to the left and number fields aligned to right
git-svn-id: svn+ssh://devel.inticol.com/home/svn/di8/trunk@1395 9cf8542c-9828-0410-8776-d8f572d62bc1

--- a/web/css/desinventar.css
+++ b/web/css/desinventar.css
@@ -88,8 +88,12 @@ table.col {
 	overflow: auto; font-size:10px; border: thin solid;
 }
 
-.col td	{
+.StatisticCellNumber {
 	border-right: thin solid #ccc; text-align: right;
+}
+
+.StatisticCellText {
+	text-align: left;
 }
 
 .header     { 
